bugfix overflow by removing bootstrap margin on .row class

--- a/static/style/custom.css
+++ b/static/style/custom.css
@@ -40,6 +40,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   /* margin-left: auto; */
 }
 
+.row{
+    margin-right: 0;
+    margin-left: 0;
+}
+
 section {
   padding-right: 68px;
   padding-left: 68px;
